--- a/microservicio-aerolineas/src/main/resources/application.properties
+++ b/microservicio-aerolineas/src/main/resources/application.properties
@@ -2,20 +2,20 @@ spring.application.name=microservicio-aerolineas
 
 
 spring.datasource.url=jdbc:oracle:thin:@//127.0.0.1:1521/xe
-spring.datasource.username=admin
-spring.datasource.password=admin
+spring.datasource.username=system
+spring.datasource.password=123456
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 
 #nos permiten crear un esque,ma de base de datos
 spring.jpa.hibernate.ddl-auto=update
 
-#Configuraciones para que sea un cliente de eureka
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
-
-#OPCIONALES
-eureka.instance.instance-id=$s{spring.application.name}:${random.value}
-server.port=${PORT:0}
-
-#PARA LEVANTAR COMO API NORMAL HAY QUE DESCOMENTAR ESTA LINEA 
-#COMENTAR LAS DE ARRIBA
-#eureka.client.enable = false
+##Configuraciones para que sea un cliente de eureka
+#eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+#
+##OPCIONALES
+#eureka.instance.instance-id=$s{spring.application.name}:${random.value}
+#server.port=${PORT:0}
+#
+##PARA LEVANTAR COMO API NORMAL HAY QUE DESCOMENTAR ESTA LINEA
+##COMENTAR LAS DE ARRIBA
+eureka.client.enabled=false
