feat(microservice): add Eureka client dependency
Add spring-cloud-starter-netflix-eureka-client dependency to enable
service discovery and registration with Eureka server.

--- a/microservicio-aerolineas/src/main/resources/application.properties
+++ b/microservicio-aerolineas/src/main/resources/application.properties
@@ -10,12 +10,12 @@ spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 spring.jpa.hibernate.ddl-auto=update
 
 ##Configuraciones para que sea un cliente de eureka
-#eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 #
 ##OPCIONALES
 #eureka.instance.instance-id=$s{spring.application.name}:${random.value}
-#server.port=${PORT:0}
+server.port=${PORT:0}
 #
 ##PARA LEVANTAR COMO API NORMAL HAY QUE DESCOMENTAR ESTA LINEA
 ##COMENTAR LAS DE ARRIBA
-eureka.client.enabled=false
+#eureka.client.enabled=false
