--- a/microservicio-aerolineas/pom.xml
+++ b/microservicio-aerolineas/pom.xml
@@ -73,7 +73,11 @@
             <groupId>jakarta.validation</groupId>
             <artifactId>jakarta.validation-api</artifactId>
         </dependency>
-    </dependencies>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+		</dependency>
+	</dependencies>
 
 	<build>
 		<plugins>
