typo and missing import

--- a/microservicio-gateway/src/main/resources/application.properties
+++ b/microservicio-gateway/src/main/resources/application.properties
@@ -3,10 +3,11 @@ spring.application.name=microservicio-gateway
 #CONFIRACIONES PARA QUE SEA UN CLIENTE EUREKA
 eureka.client.service-url.defaultZone= http://localhost:8761/eureka
 
-server.port=${PORT:8090}
+#server.port=${PORT:8090}
+server.port=8090
 
 spring.cloud.gateway.routes[0].id=microservicio-aerolineas
-spring.cloud.gateway.routes[0].uri=lg://microservicio-aerolinea
+spring.cloud.gateway.routes[0].uri=lb://microservicio-aerolinea
 spring.cloud.gateway.routes[0].predicates=Path=/api/aerolineas/**
 spring.cloud.gateway.routes[0].filters=StripPrefix=2
 
@@ -21,5 +22,5 @@ spring.cloud.gateway.routes[2].uri=lg://microservicio-aerolinea
 spring.cloud.gateway.routes[2].predicates=Path=/api/aerolineas/**
 spring.cloud.gateway.routes[2].filters=StripPrefix=2
 
-
-sspring.cloud.loadbalacer.enabled=true 
+#spring.cloud.loadbalacer.enabled=true
+spring.cloud.loadbalancer.enabled=true
