--- a/microservicio-gateway/src/main/resources/application.properties
+++ b/microservicio-gateway/src/main/resources/application.properties
@@ -1,26 +1,35 @@
 spring.application.name=microservicio-gateway
 
-#CONFIRACIONES PARA QUE SEA UN CLIENTE EUREKA
-eureka.client.service-url.defaultZone= http://localhost:8761/eureka
 
-#server.port=${PORT:8090}
+# Enable all endpoints for testing
+#management.endpoints.web.exposure.include=*
+
+# Log level for debugging
+logging.level.com.gmichel=DEBUG
+logging.level.org.springframework.web=DEBUG
+
+#Cliente de eureka
+eureka.client.service-url.defaultZone =http://localhost:8761/eureka
 server.port=8090
 
 spring.cloud.gateway.routes[0].id=microservicio-aerolineas
-spring.cloud.gateway.routes[0].uri=lb://microservicio-aerolinea
+spring.cloud.gateway.routes[0].uri=lb://microservicio-aerolineas
 spring.cloud.gateway.routes[0].predicates=Path=/api/aerolineas/**
-spring.cloud.gateway.routes[0].filters=StripPrefix=2
+spring.cloud.gateway.routes[0].filters =StripPrefix=2
 
+spring.cloud.gateway.routes[1].id=microservicio-aeropuertos
+spring.cloud.gateway.routes[1].uri=lb://microservicio-aeropuertos
+spring.cloud.gateway.routes[1].predicates=Path=/api/aeropuertos/**
+spring.cloud.gateway.routes[1].filters =StripPrefix=2
 
-spring.cloud.gateway.routes[1].id=microservicio-aviones
-spring.cloud.gateway.routes[1].uri=lg://microservicio-aviones
-spring.cloud.gateway.routes[1].predicates=Path=/api/aviones/**
-spring.cloud.gateway.routes[1].filters=StripPrefix=2
+spring.cloud.gateway.routes[2].id=microservicio-aviones
+spring.cloud.gateway.routes[2].uri=lb://microservicio-aviones
+spring.cloud.gateway.routes[2].predicates=Path=/api/aviones/**
+spring.cloud.gateway.routes[2].filters =StripPrefix=2
 
-spring.cloud.gateway.routes[2].id=microservicio-aerolineas
-spring.cloud.gateway.routes[2].uri=lg://microservicio-aerolinea
-spring.cloud.gateway.routes[2].predicates=Path=/api/aerolineas/**
-spring.cloud.gateway.routes[2].filters=StripPrefix=2
+spring.cloud.gateway.routes[3].id=microservicio-vuelos
+spring.cloud.gateway.routes[3].uri=lb://microservicio-vuelos
+spring.cloud.gateway.routes[3].predicates=Path=/api/vuelos/**
+spring.cloud.gateway.routes[3].filters =StripPrefix=2
 
-#spring.cloud.loadbalacer.enabled=true
 spring.cloud.loadbalancer.enabled=true
