fix(eureka): correct instance ID syntax in application properties

--- a/microservicio-aerolineas/src/main/resources/application.properties
+++ b/microservicio-aerolineas/src/main/resources/application.properties
@@ -13,7 +13,7 @@ spring.jpa.hibernate.ddl-auto=update
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 #
 ##OPCIONALES
-#eureka.instance.instance-id=$s{spring.application.name}:${random.value}
+eureka.instance.instance-id=${spring.application.name}:${random.value}
 server.port=${PORT:0}
 #
 ##PARA LEVANTAR COMO API NORMAL HAY QUE DESCOMENTAR ESTA LINEA
