--- a/microservicio-gateway/src/main/resources/application.properties
+++ b/microservicio-gateway/src/main/resources/application.properties
@@ -1,13 +1,6 @@
 spring.application.name=microservicio-gateway
 
 
-# Enable all endpoints for testing
-#management.endpoints.web.exposure.include=*
-
-# Log level for debugging
-logging.level.com.gmichel=DEBUG
-logging.level.org.springframework.web=DEBUG
-
 #Cliente de eureka
 eureka.client.service-url.defaultZone =http://localhost:8761/eureka
 server.port=8090
@@ -32,4 +25,4 @@ spring.cloud.gateway.routes[3].uri=lb://microservicio-vuelos
 spring.cloud.gateway.routes[3].predicates=Path=/api/vuelos/**
 spring.cloud.gateway.routes[3].filters =StripPrefix=2
 
-spring.cloud.loadbalancer.enabled=true
+#spring.cloud.loadbalancer.enabled=true
