--- a/microservicio-aviones/src/main/resources/application.properties
+++ b/microservicio-aviones/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=microservicio-aviones
 
 spring.datasource.url=jdbc:oracle:thin:@//127.0.0.1:1521/xe
-spring.datasource.username=admin
-spring.datasource.password=admin
+spring.datasource.username=system
+spring.datasource.password=123456
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 
 #nos permiten crear un esque,ma de base de datos
