feat(aviones): override PUT endpoint in AvionController
Add custom implementation for the PUT endpoint in AvionController with proper
validation annotations and request mapping. This extends the CommonController
functionality with specific behavior for the aviones microservice."

--- a/microservicio-aviones/src/main/resources/application.properties
+++ b/microservicio-aviones/src/main/resources/application.properties
@@ -17,3 +17,6 @@ server.port=${PORT:0}
 #PARA LEVANTAR COMO API NORMAL HAY QUE DESCOMENTAR ESTA LINEA 
 # COMENTAR LAS DE ARRIBA
 #eureka.client.enable = false
+logging.level.com.gmichel.aviones=DEBUG
+# For all application logs
+logging.level.com.gmichel=INFO
